--- a/staytuned-cordova-sdk-demo/package.json
+++ b/staytuned-cordova-sdk-demo/package.json
@@ -11,7 +11,9 @@
     "cordova-android": "^8.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
     "rimraf": "^3.0.2"
   },
   "scripts": {
