--- a/ionic-angular/package.json
+++ b/ionic-angular/package.json
@@ -28,8 +28,8 @@
         "@ionic/angular": "5.3.2",
         "jetifier": "1.6.6",
         "rxjs": "~6.5.1",
-        "@staytuned-io/cordova-components": "~1.0.1",
-        "@staytuned-io/cordova-typescript": "~1.0.0",
+        "@staytuned-io/cordova-components": "^1.0.5",
+        "@staytuned-io/cordova-typescript": "^1.0.4",
         "tslib": "1.11.1",
         "zone.js": "~0.10.2"
     },
@@ -50,7 +50,7 @@
         "cordova-plugin-ionic-webview": "5.0.0",
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-statusbar": "2.4.2",
-        "@staytuned-io/cordova-plugin-staytuned": "1.0.3",
+        "@staytuned-io/cordova-plugin-staytuned": "^1.0.4",
         "cordova-plugin-whitelist": "1.3.3",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~4.2.1",
@@ -76,7 +76,8 @@
                 "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
             },
             "cordova-plugin-ionic-keyboard": {},
-            "@staytuned-io/cordova-plugin-staytuned": {}
+            "@staytuned-io/cordova-plugin-staytuned": {},
+            "cordova-plugin-staytuned": {}
         },
         "platforms": [
             "android"
