--- a/react-cordova/package.json
+++ b/react-cordova/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@staytuned-io/cordova-components": "^1.0.1",
-        "@staytuned-io/cordova-typescript": "^1.0.0",
+        "@staytuned-io/cordova-components": "^1.0.5",
+        "@staytuned-io/cordova-typescript": "^1.0.5",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -18,7 +18,7 @@
         "typescript": "~3.7.2"
     },
     "devDependencies": {
-        "@staytuned-io/cordova-plugin-staytuned": "^1.0.0",
+        "@staytuned-io/cordova-plugin-staytuned": "^1.0.5",
         "cordova-android": "^9.0.0",
         "cordova-browser": "^6.0.0",
         "cordova-plugin-whitelist": "^1.3.4"
@@ -49,7 +49,7 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-staytuned": {}
+            "@staytuned-io/cordova-plugin-staytuned": {}
         },
         "platforms": [
             "browser",
