--- a/react-cordova/package.json
+++ b/react-cordova/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@staytuned-io/cordova-components": "^1.0.7",
-        "@staytuned-io/cordova-typescript": "^1.0.7",
+        "@staytuned-io/cordova-components": "^1.0.9",
+        "@staytuned-io/cordova-typescript": "^1.0.9",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -12,13 +12,14 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "core-js": "^3.6.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.3",
         "typescript": "~3.7.2"
     },
     "devDependencies": {
-        "@staytuned-io/cordova-plugin-staytuned": "^1.0.7",
+        "@staytuned-io/cordova-plugin-staytuned": "^1.0.11",
         "cordova-android": "^9.0.0",
         "cordova-browser": "^6.0.0",
         "cordova-plugin-whitelist": "^1.3.4"
